<resources>

    <string name="app_name">Smart House</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="incorrect_format">{0} is an incorrect format.</string>
    <string name="duplicate_format">{0} cannot duplicate.</string>
    <string name="error_warning">Opps, something went wrong, try again later.</string>
    <string name="email">Email</string>
    <string name="university_law">University Law College</string>
    <!--transition-->
    <string name="logo_transition">logo_transition</string>

    <string name="info">Info</string>
    <string name="pick_time">Pick a time</string>

    <string name="temperature">Temperature</string>
    <string name="camera">Camera</string>
    <string name="device">Device: </string>
    <string name="main_device">Main Device: </string>
    <string name="address">Address: </string>
    <string name="warning">Warning: </string>

    <string name="room_bed">Bedroom</string>
    <string name="room_living">Livingroom</string>
    <string name="room_kitchen">Kitchen</string>
    <string name="room_bath">Bathroom</string>
    <string name="room_library">Library</string>

    <string name="dv_camera">Camera</string>
    <string name="dv_light">Light</string>
    <string name="dv_gas">Gas</string>
    <string name="dv_temp">Temp</string>
    <string name="dv_door">Door</string>

    <string name="house_device_number">{0} devices</string>
</resources>
