<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/ll_total_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/default_padding"
        android:elevation="3dp"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="0dp"
        card_view:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_small_house" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingEnd="0dp"
                android:paddingStart="@dimen/default_padding">

                <!--Name And Icon-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    card_view:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Tòa nhà Viettel"
                        android:textSize="@dimen/login_text_size" />

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:src="@drawable/ic_more"
                        android:tint="@color/gray" />
                </LinearLayout>

                <!--Address-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small_padding"
                    android:orientation="horizontal"
                    card_view:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingEnd="@dimen/default_padding"
                        android:paddingStart="0dp"
                        android:text="@string/address"
                        android:textColor="@color/gray" />

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Số 7 ngõ 147 An Dương" />
                </LinearLayout>

                <!--Main Device-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small_padding"
                    android:orientation="horizontal"
                    card_view:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingEnd="@dimen/default_padding"
                        android:paddingStart="0dp"
                        android:text="@string/main_device"
                        android:textColor="@color/gray" />

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="2" />
                </LinearLayout>

                <!--Device-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small_padding"
                    android:orientation="horizontal"
                    card_view:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingEnd="@dimen/default_padding"
                        android:paddingStart="0dp"
                        android:text="@string/device"
                        android:textColor="@color/gray" />

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="45/54 active" />
                </LinearLayout>

                <!--Warning-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small_padding"
                    android:orientation="horizontal"
                    card_view:ignore="UseCompoundDrawables">

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingEnd="@dimen/default_padding"
                        android:paddingStart="0dp"
                        android:text="@string/warning"
                        android:textColor="@color/gray" />

                    <TextView
                        style="@style/text_view_default"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="#66BB6A"
                        android:textStyle="bold"
                        android:text="ON" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>